# A-Simple-Api-C-Mongoose

./: .gitignore  CMakeLists.txt  README.md  project.h.in
.github/workflows/: automated-api-tests.yml  codeql.yml
src/: CMakeLists.txt  main.c
src/auth/: CMakeLists.txt  auth.c  bcrypt.c
src/auth/includes/: auth.h
src/models/: CMakeLists.txt  model.c
src/models/includes/: model.h
src/router/: CMakeLists.txt  router.c  router.h
src/router/includes/: router.h
